// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connector Details Page Edit and save connector YAML 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--padding-large"
    style="height: inherit;"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-small"
      style="width: 100%;"
    >
      <div
        class="StyledProps--font StyledProps--main buttonContainer"
      />
      <div
        class="Layout--horizontal StyledProps--main"
        style="height: 100%;"
      >
        <div
          class="fullWidth"
        >
          <div />
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <button
              class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--margin-top-large Button--with-current-color"
              disabled=""
              id="saveYAMLChanges"
              tabindex="-1"
              title=""
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                saveChanges
              </span>
            </button>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-top-large Button--with-current-color"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Connector Details Page Edit and save connector via YAML for a git-sync enabled project 1`] = `
<div
  class="bp3-dialog gitDialog"
  style="width: 720px; min-height: 540px; border-left: 0; padding-bottom: 0px; position: relative; overflow: hidden;"
>
  <div
    class="StyledProps--font StyledProps--main modalContainer"
    style="height: inherit;"
  >
    <div
      class="Layout--horizontal StyledProps--main userInfo StyledProps--flex StyledProps--flex-alignItems-center StyledProps--margin-top-xsmall"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700"
      >
        common.git.currentUserLabel
      </p>
    </div>
    <p
      class="StyledProps--font StyledProps--main modalHeader StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800 StyledProps--padding-bottom-small StyledProps--margin-bottom-small StyledProps--margin-top-xlarge"
    >
      common.git.saveResourceLabel
    </p>
    <div
      class="StyledProps--font StyledProps--main modalBody"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <div
              class="StyledProps--font StyledProps--main formBody"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        >
                          docker
                        </span>
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="saveToGitForm_name"
                    >
                      name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="name"
                        type="text"
                        value="docker"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
              >
                common.gitSync.harnessFolderLabel
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main formRow"
              >
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="repoIdentifier-1"
                >
                  <label
                    class="bp3-label"
                    for="repoIdentifier"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="saveToGitForm_repoIdentifier"
                    >
                      common.git.selectRepoLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="repoIdentifier"
                            placeholder="- Select -"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="rootFolder-2"
                >
                  <label
                    class="bp3-label"
                    for="rootFolder"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="saveToGitForm_rootFolder"
                    >
                      common.gitSync.harnessFolderLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="rootFolder"
                            placeholder="- Select -"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group bp3-disabled"
                data-id="filePath-3"
              >
                <label
                  class="bp3-label"
                  for="filePath"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="saveToGitForm_filePath"
                  >
                    common.git.filePath
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group bp3-disabled"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      disabled=""
                      name="filePath"
                      type="text"
                      value="docker.yaml"
                    />
                  </div>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--margin-top-large StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
              >
                common.gitSync.commitDetailsLabel
              </p>
              <div
                class="bp3-form-group"
                data-id="commitMsg-4"
              >
                <label
                  class="bp3-label"
                  for="commitMsg"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="saveToGitForm_commitMsg"
                  >
                    common.git.commitMessage
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <textarea
                    autocomplete="off"
                    class="bp3-input bp3-fill"
                    maxlength="1024"
                    name="commitMsg"
                  >
                    common.gitSync.updateResource
                  </textarea>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-grey600 StyledProps--padding-bottom-small StyledProps--margin-top-large"
              >
                common.git.branchSelectHeader
              </p>
              <div
                class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
              >
                <div
                  class="StyledProps--font StyledProps--main branchSection StyledProps--padding-top-small"
                >
                  <label
                    class="bp3-control bp3-radio bp3-large StyledProps--font Radio--radio StyledProps--main"
                  >
                    <input
                      checked=""
                      type="radio"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="git-branch-existing"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 16 9"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M12.403 3.67H16v1.626h-3.597a4.477 4.477 0 01-8.807 0H0V3.67h3.596a4.477 4.477 0 018.807 0zm-7.26.813a2.857 2.857 0 105.714 0 2.857 2.857 0 00-5.714 0z"
                          fill="#383946"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="StyledProps--font StyledProps--main StyledProps--margin-left-small StyledProps--inline"
                    >
                      common.git.existingBranchCommitLabel
                    </span>
                    <span
                      class="StyledProps--font StyledProps--main StyledProps--margin-left-small StyledProps--inline StyledProps--padding-top-xsmall StyledProps--padding-bottom-xsmall StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--background-primary2 StyledProps--border StyledProps--color StyledProps--color-black"
                    >
                      main
                    </span>
                  </label>
                  <div
                    class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline StyledProps--flex-justifyContent-flex-start StyledProps--padding-top-small"
                  >
                    <div
                      class="bp3-form-group"
                      data-id="createPr-5"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <label
                          class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                        >
                          <input
                            name="createPr"
                            type="checkbox"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          <span
                            class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                            data-tooltip-id="saveToGitForm_createPr"
                          >
                            common.git.startPRLabel
                          </span>
                        </label>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group bp3-disabled branchSelector"
                      data-id="targetBranch-6"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-popover-wrapper Select--main bp3-fill"
                        >
                          <div
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-input-group bp3-disabled"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                disabled=""
                                name="targetBranch"
                                placeholder="- Select -"
                                style="padding-right: 0px;"
                                type="text"
                                value=""
                              />
                              <span
                                class="bp3-input-action"
                              >
                                <span
                                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                  icon="chevron-down"
                                >
                                  <svg
                                    data-icon="chevron-down"
                                    height="14"
                                    viewBox="0 0 16 16"
                                    width="14"
                                  >
                                    <desc>
                                      chevron-down
                                    </desc>
                                    <path
                                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main branchSection StyledProps--padding-bottom-small"
                >
                  <label
                    class="bp3-control bp3-radio bp3-large StyledProps--font Radio--radio StyledProps--main"
                  >
                    <input
                      data-test="newBranchRadioBtn"
                      type="radio"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    <span
                      class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey700"
                      data-icon="git-new-branch"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 13 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--margin-left-small"
                    >
                      common.git.newBranchCommitLabel
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-top-medium"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main formButton StyledProps--intent-primary Button--with-current-color"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main formButton StyledProps--margin-left-medium Button--with-current-color"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
  <button
    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main crossIcon Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
    type="button"
  >
    <span
      class="bp3-icon bp3-icon-cross StyledProps--main"
      icon="cross"
    >
      <svg
        data-icon="cross"
        height="18"
        viewBox="0 0 16 16"
        width="18"
      >
        <desc>
          cross
        </desc>
        <path
          d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Connector Details Page Edit details test 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--padding-large"
    style="height: inherit;"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-small"
      style="width: 67%;"
    >
      <div
        class="StyledProps--font StyledProps--main buttonContainer"
      />
      <div
        class="Layout--horizontal StyledProps--main"
        style="height: 100%;"
      />
    </div>
    <div
      class="Layout--vertical StyledProps--main activityContainer"
    >
      <div
        class="StyledProps--font StyledProps--main activitySummary"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <span
            class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--inline StyledProps--color StyledProps--color-grey800"
          >
            connectivityStatus
          </span>
          <span
            class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-size-medium"
          >
            na
          </span>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
        >
          lastStatusCheckAt
           
          na
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-medium"
        >
          lastSuccessfulStatusCheckAt
           
          na
        </p>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            connectors.stepThreeName
          </span>
        </button>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--margin-top-large StyledProps--margin-bottom-large StyledProps--color StyledProps--color-grey800"
        >
          changeHistory
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
        >
          lastUpdated
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
        >
           
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
        >
          connectorCreated
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-medium"
        >
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Connector Details Page Rendering connector details with DockerRegistry: DockerRegistry 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--padding-large"
    style="height: inherit;"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-small"
      style="width: 67%;"
    >
      <div
        class="StyledProps--font StyledProps--main buttonContainer"
      >
        <div
          class="optionBtns"
        >
          <div
            class="item selected"
            data-name="visual-btn"
            role="button"
            tabindex="0"
          >
            visual
          </div>
          <div
            class="item"
            data-name="yaml-btn"
            role="button"
            tabindex="0"
          >
            yaml
          </div>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--without-shadow Button--withLeftIcon"
          id="editDetailsBtn"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
            icon="edit"
          >
            <svg
              data-icon="edit"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            editDetails
          </span>
        </button>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="height: 100%;"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          style="width: 100%; height: 100%;"
        >
          <div
            class="Layout--horizontal StyledProps--main detailsSectionContainer"
          >
            <div
              class="StyledProps--font StyledProps--main detailsSection"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
              >
                overview
              </p>
            </div>
            <div
              class="StyledProps--font StyledProps--main detailsSection"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
              >
                credentials
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main activityContainer"
    >
      <div
        class="StyledProps--font StyledProps--main activitySummary"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <span
            class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--inline StyledProps--color StyledProps--color-grey800"
          >
            connectivityStatus
          </span>
          <span
            class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-size-medium"
          >
            na
          </span>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
        >
          lastStatusCheckAt
           
          na
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-medium"
        >
          lastSuccessfulStatusCheckAt
           
          na
        </p>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            connectors.stepThreeName
          </span>
        </button>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--margin-top-large StyledProps--margin-bottom-large StyledProps--color StyledProps--color-grey800"
        >
          changeHistory
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
        >
          lastUpdated
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
        >
           
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
        >
          connectorCreated
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-medium"
        >
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Connector Details Page Rendering connector details with K8sCluster: K8sCluster 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--padding-large"
    style="height: inherit;"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-small"
      style="width: 67%;"
    >
      <div
        class="StyledProps--font StyledProps--main buttonContainer"
      >
        <div
          class="optionBtns"
        >
          <div
            class="item selected"
            data-name="visual-btn"
            role="button"
            tabindex="0"
          >
            visual
          </div>
          <div
            class="item"
            data-name="yaml-btn"
            role="button"
            tabindex="0"
          >
            yaml
          </div>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--without-shadow Button--withLeftIcon"
          id="editDetailsBtn"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
            icon="edit"
          >
            <svg
              data-icon="edit"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            editDetails
          </span>
        </button>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="height: 100%;"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          style="width: 100%; height: 100%;"
        >
          <div
            class="Layout--horizontal StyledProps--main detailsSectionContainer"
          >
            <div
              class="StyledProps--font StyledProps--main detailsSection"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
              >
                overview
              </p>
            </div>
            <div
              class="StyledProps--font StyledProps--main detailsSection"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
              >
                credentials
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main activityContainer"
    >
      <div
        class="StyledProps--font StyledProps--main activitySummary"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <span
            class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--inline StyledProps--color StyledProps--color-grey800"
          >
            connectivityStatus
          </span>
          <span
            class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-size-medium"
          >
            na
          </span>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
        >
          lastStatusCheckAt
           
          na
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-medium"
        >
          lastSuccessfulStatusCheckAt
           
          na
        </p>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            connectors.stepThreeName
          </span>
        </button>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--margin-top-large StyledProps--margin-bottom-large StyledProps--color StyledProps--color-grey800"
        >
          changeHistory
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
        >
          lastUpdated
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
        >
           
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
        >
          connectorCreated
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-medium"
        >
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Connector Details Page Rendering connector details: view text 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--padding-large"
    style="height: inherit;"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-small"
      style="width: 67%;"
    >
      <div
        class="StyledProps--font StyledProps--main buttonContainer"
      >
        <div
          class="optionBtns"
        >
          <div
            class="item selected"
            data-name="visual-btn"
            role="button"
            tabindex="0"
          >
            visual
          </div>
          <div
            class="item"
            data-name="yaml-btn"
            role="button"
            tabindex="0"
          >
            yaml
          </div>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--without-shadow Button--withLeftIcon"
          id="editDetailsBtn"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
            icon="edit"
          >
            <svg
              data-icon="edit"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            editDetails
          </span>
        </button>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="height: 100%;"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          style="width: 100%; height: 100%;"
        >
          <div
            class="Layout--horizontal StyledProps--main detailsSectionContainer"
          >
            <div
              class="StyledProps--font StyledProps--main detailsSection"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
              >
                overview
              </p>
            </div>
            <div
              class="StyledProps--font StyledProps--main detailsSection"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
              >
                credentials
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main activityContainer"
    >
      <div
        class="StyledProps--font StyledProps--main activitySummary"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <span
            class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--inline StyledProps--color StyledProps--color-grey800"
          >
            connectivityStatus
          </span>
          <span
            class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-size-medium"
          >
            na
          </span>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
        >
          lastStatusCheckAt
           
          na
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-medium"
        >
          lastSuccessfulStatusCheckAt
           
          na
        </p>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            connectors.stepThreeName
          </span>
        </button>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--margin-top-large StyledProps--margin-bottom-large StyledProps--color StyledProps--color-grey800"
        >
          changeHistory
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
        >
          lastUpdated
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
        >
           
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
        >
          connectorCreated
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-medium"
        >
           
        </p>
      </div>
    </div>
  </div>
</div>
`;
